src/styles/footer.module.css
.footer_container {
    width: 100%;
    height: 250px;
    padding-left: 10%;
    position: relative;
    background: #373737;
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    /* border: 3px solid red; */
    transition: all 1s ease; 
    padding-left: 2%;
}

.footer_text_wrapper {
    /* width: 100%; */
    gap: 10px;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    transition: all 1s ease; 
    /* border: 3px solid green; */
}

.footer_title_text {
    color: white;
    font-size: 24px;
    font-family: 'Nanum Gothic';
    font-weight: 600;
    word-wrap: break-word;
    transition: all 1s ease; 
    /* border: 1px solid red; */
}

.footer_content_container{
    /* border: 1px solid red; */
}
.footer_content{
    display: flex;
}
.footer_content div{
    color: white;
    font-size: 20px;
    font-family: 'Nanum Gothic';
    font-weight: 400;
    line-height: 160%;
    word-wrap: break-word;
    transition: all 1s ease; 
}

@media (max-width: 480px) {
    .footer_container {
        height: 75px;
    }
    .footer_title_text{
        font-size: 12px;
    }

    .footer_content_text{
        font-size: 8px;
    }
    .footer_content{
        display: flex;
        flex-wrap: wrap;
    }
    .footer_content div{
        font-size: 8px;
    }
  }

  @media (min-width: 481px) and (max-width: 768px) {
    .footer_container {
        height: 150px;
    }

    .footer_title_text{
        font-size: 16px;
    }

    .footer_content_text{
        font-size: 12px;
    }
    .footer_content{
        display: flex;
        flex-wrap: wrap;
    }
    .footer_content div{
        font-size: 12px;
    }
  }

  @media (min-width: 769px) and (max-width: 1024px) {
    .footer_container {
        height: 200px;
    }

    .footer_title_text{
        font-size: 20px;
    }

    .footer_content_text{
        font-size: 16px;
    }

    .footer_content{
        display: flex;
        flex-wrap: wrap;
    }
    .footer_content div{
        font-size: 16px;
    }
  }

